--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -42,7 +42,7 @@
     <div>
         <span style="margin-left: 150px;font-weight: bold">报销种类</span>
         <span style="margin-left: 190px;font-weight: bold">报销金额</span>
-        <span style="margin-left: 130px;font-weight: bold">单据张数</span>
+        <span style="margin-left: 130px;font-weight: bold">单据名称</span>
     </div>
 <div v-for="item in items" style="margin-top: 10px;margin-left: 40px;width: 100%;font-size: medium">
     <select  class="form-control" style="width: 20%" v-model="item.expenseType">
